Bug 350825 - Percent-encode commas in URI of detached attachment. r=mkmelin

--HG--
extra : amend_source : f9c9ab02ff7c3c507c4e43e5cfc3267889e3edbc